li strikethrough bug fixed + deleteItemBtn aligned

--- a/todo-app.css
+++ b/todo-app.css
@@ -30,7 +30,7 @@ h2  {
 
 ul {
     display: flex;
-    justify-content: center;
+    align-items: center;
     flex-direction: column;
     margin-top: 30px;
     padding: 0;
@@ -51,17 +51,11 @@ li {
     cursor: pointer;
 }
 
-/* when you can, come back and center these <li> buttons vertically 
-(NOTE that below commented code did not work) */
 .deleteItemBtn  {
     background-color: black;
     color: grey;
     font-family: monospace;
     cursor: pointer;
     margin-left: 30px;
-    /* margin-bottom: 15px; */
-    /* padding-bottom: 10px; */
-    /* text-align: center; */
-    /* margin-top: 0px; */
-    /* object-fit: contain; */
+    vertical-align: middle;
 }
